# strut

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  justfile  rustfmt.toml
.config/: nextest.toml
strut/: CHANGELOG.md  Cargo.toml  README.md
strut/src/: app.rs  launchpad.rs  lib.rs
strut/src/facade/: database.rs  dotenv.rs  rabbitmq.rs
strut/src/facade/config/: error.rs  initial.rs  live.rs
strut/src/facade/config/initial/: statics.rs
strut/src/facade/config/live/: statics.rs
strut/src/launchpad/wiring/: configuration.rs  preflight.rs  runtime.rs
strut_config/: CHANGELOG.md  Cargo.toml  README.md
strut_config/src/: assembler.rs  lib.rs  scanner.rs
strut_config/src/scanner/: dir.rs  entry.rs  file.rs
strut_core/: CHANGELOG.md  Cargo.toml  README.md
strut_core/src/: context.rs  lib.rs  pivot.rs  profile.rs  replica.rs  spindown.rs
strut_core/src/profile/: name.rs
strut_core/src/replica/: index.rs  lifetime_id.rs
strut_core/src/spindown/: registry.rs  token.rs
strut_core/tests/: app_context_manual.rs  app_context_sigint.rs  app_context_sigterm.rs  app_profile_custom.rs  app_profile_default.rs  app_profile_dev.rs  app_profile_prod.rs  app_profile_test.rs  app_replica_index.rs  app_replica_lifetime_id.rs  app_spindown_cycles.rs
strut_core/tests/common/: context.rs
strut_database/: CHANGELOG.md  Cargo.toml  README.md
strut_database/src/: config.rs  connector.rs  lib.rs  migrations.rs
strut_database/src/repr/: cert.rs  handle.rs  log.rs  pool.rs
strut_database/src/repr/handle/: mysql.rs  postgres.rs  sqlite.rs
strut_database/src/repr/handle/mysql/: ssl.rs
strut_database/src/repr/handle/postgres/: ssl.rs
strut_database/src/repr/handle/sqlite/: optimize.rs
strut_deserialize/: CHANGELOG.md  Cargo.toml  README.md
strut_deserialize/src/: lib.rs  one_or_many.rs  slug.rs
strut_deserialize/src/slug/: map.rs
strut_factory/: CHANGELOG.md  Cargo.toml  README.md
strut_factory/src/: entry.rs  lib.rs
strut_factory/src/common/: error.rs  parse.rs
strut_factory/src/config/: choice.rs
strut_factory/src/config/field/: generator.rs  input.rs
strut_rabbitmq/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
strut_rabbitmq/src/: config.rs  connector.rs  handle.rs  lib.rs
strut_rabbitmq/src/repr/: delivery.rs  egress.rs  ingress.rs
strut_rabbitmq/src/repr/ingress/: exchange.rs  header.rs  queue.rs
strut_rabbitmq/src/routing/: egress.rs  exchange.rs  ingress.rs
strut_rabbitmq/src/routing/ingress/: queue.rs
strut_rabbitmq/src/transport/: inbound.rs  outbound.rs
strut_rabbitmq/src/transport/inbound/: decoder.rs  delivery.rs  envelope.rs  subscriber.rs
strut_rabbitmq/src/transport/inbound/envelope/: stack.rs
strut_rabbitmq/src/transport/outbound/: dispatch.rs  publisher.rs
strut_rabbitmq/src/transport/outbound/publisher/: api.rs  inner.rs
strut_rabbitmq/src/util/: amqp_properties.rs  amqp_value.rs  coerce.rs  field_table.rs  morph.rs
strut_rabbitmq/src/util/amqp_properties/: push.rs  retrieve.rs
strut_rabbitmq/src/util/field_table/: push.rs  retrieve.rs
strut_sentry/: CHANGELOG.md  Cargo.toml  README.md
strut_sentry/src/: config.rs  integration.rs  lib.rs  tracing.rs
strut_sync/: CHANGELOG.md  Cargo.toml  README.md
strut_sync/src/: conduit.rs  latch.rs  lib.rs
strut_tracing/: CHANGELOG.md  Cargo.toml  README.md
strut_tracing/src/: config.rs  fmt.rs  lib.rs
strut_tracing/src/config/: flavor.rs  verbosity.rs
strut_util/: CHANGELOG.md  Cargo.toml  README.md
strut_util/src/: lib.rs
strut_util/src/backoff/: config.rs  wrapper.rs
test_strut/: Cargo.toml  README.md
test_strut/src/: lib.rs
test_strut/tests/: attribute.rs  config.rs  custom.rs  database.rs  intro.rs  landing.rs  profile.rs  quickstart.rs  sentry.rs  tracing.rs
test_strut/tests/cases/attribute/args/src/: main.rs
test_strut/tests/cases/attribute/non_async/src/: main.rs
test_strut/tests/cases/attribute/non_main/: Cargo.toml
test_strut/tests/cases/attribute/non_main/src/: main.rs
test_strut/tests/cases/attribute/return_type/src/: main.rs
test_strut/tests/cases/config/01_toml/config/: database.toml
test_strut/tests/cases/config/01_toml/src/: main.rs
test_strut/tests/cases/config/01_yml/config/: database.yml
test_strut/tests/cases/config/02_toml/: .env
test_strut/tests/cases/custom/full/: Cargo.toml
test_strut/tests/cases/database/facade/: Cargo.toml
test_strut/tests/cases/database/mysql_exploded_toml/: Cargo.toml
test_strut/tests/cases/database/postgres_url_yaml/: Cargo.toml
test_strut/tests/cases/database/usage_yaml/: Cargo.toml
test_strut/tests/cases/landing/: Cargo.toml
test_strut/tests/cases/landing/src/: main.rs
test_strut/tests/cases/profile/dev/: stdout
test_strut/tests/cases/profile/dev_default/: Cargo.toml
test_strut/tests/cases/profile/other13/: stdout
test_strut/tests/cases/profile/preprod/: stdout
test_strut/tests/cases/profile/prod/: stdout
test_strut/tests/cases/profile/some_env/: .env  stdout
test_strut/tests/cases/profile/test/: stdout
test_strut/tests/cases/quickstart/01/: stdout
test_strut/tests/cases/quickstart/02_toml/: stdout
test_strut/tests/cases/quickstart/02_yaml/: Cargo.toml
test_strut/tests/cases/quickstart/03/: stdout
test_strut/tests/cases/quickstart/04/: Cargo.toml
test_strut/tests/cases/quickstart/05_yaml/: Cargo.toml
test_strut/tests/cases/sentry/config_short_toml/: Cargo.toml
test_strut/tests/cases/tracing/config_default_toml/: Cargo.toml
test_strut/tests/cases/tracing/sentry/: Cargo.toml
test_strut/tests/cases/tracing/usage/: Cargo.toml
test_strut_rabbitmq/: Cargo.toml  README.md  docker-compose.yml
test_strut_rabbitmq/tests/: confirmation.rs  direct.rs  docs.rs  fanout.rs  hash.rs  headers.rs  topic.rs  transport.rs  transport_batch.rs
test_strut_rabbitmq/tests/cases/docs/usage_toml/: Cargo.toml
test_strut_rabbitmq/tests/common/: decoder.rs  handle.rs  mod.rs  multiset.rs  names.rs  publisher.rs  subscriber.rs  util.rs
test_util/: Cargo.toml  README.md
test_util/src/: harness.rs  lib.rs
(+74 files in other folders)
