[package]
name           = "strut-config"
version        = "0.0.1"
edition        = "2024"
rust-version   = "1.85.0"
authors        = ["Erik Sargazakov <erik@serpnet.org>"]
license        = "MIT"
readme         = "README.md"
repository     = "https://github.com/strut-rs/strut"
homepage       = "https://strut-rs.github.io"
description    = "A companion to `config` crate. Part of the Strut family."
categories     = ["asynchronous", "config", "database", "web-programming"]
keywords       = ["opinionated", "application", "framework"]
publish        = true

[lib]
name = "strut_config"

#
# DEPENDENCIES
#
[dependencies]
strut-core = { path = "../strut_core" }
config     = { workspace = true, features = ["toml", "yaml"] }

#
# FEATURES
#
[features]
default = []
_probe  = []

#
# FEATURE COMBINATIONS
#
[package.metadata.cargo-feature-combinations]
exclude_features = ["default", "_probe"]
