[package]
name           = "strut-config"
version        = "0.0.2"
edition        = "2024"
rust-version   = "1.85.0"
authors        = ["Erik Sargazakov <erik@serpnet.org>"]
license        = "MIT"
documentation  = "https://docs.rs/strut-config"
readme         = "README.md"
repository     = "https://github.com/strut-rs/strut"
homepage       = "https://strut-rs.github.io"
description    = "A companion to `config` crate. Part of the Strut family."
categories     = ["asynchronous", "config", "rust-patterns", "filesystem"]
keywords       = ["internal", "helper", "config", "filesystem", "environment"]
publish        = true

[lib]
name = "strut_config"

#
# DEPENDENCIES
#
[dependencies]
strut-core = { path = "../strut_core", version = "0.0.2" }
config     = { workspace = true, features = ["toml", "yaml"] }

#
# FEATURES
#
[features]
default = []
_probe  = []

#
# FEATURE COMBINATIONS
#
[package.metadata.cargo-feature-combinations]
exclude_features = ["default", "_probe"]

#
# RELEASE
#
[package.metadata.release]
release = true
