[package]
name           = "strut-core"
version        = "0.0.1"
edition        = "2024"
rust-version   = "1.85.0"
authors        = ["Erik Sargazakov <erik@serpnet.org>"]
license        = "MIT"
readme         = "README.md"
repository     = "https://github.com/strut-rs/strut"
homepage       = "https://strut-rs.github.io"
description    = "Core facades and utilities. Part of the Strut family."
categories     = ["asynchronous", "config", "rust-patterns"]
keywords       = ["internal", "core", "synchronization", "profile"]
publish        = true

[lib]
name = "strut_core"

#
# DEPENDENCIES
#
[dependencies]
tokio         = { workspace = true, features = ["macros", "rt", "signal", "time"] }
tokio-util    = { workspace = true, features = [] }
tracing       = { workspace = true, features = ["std"] }
futures       = { workspace = true, features = ["alloc"] }
parking_lot   = { workspace = true, features = [] }
scopeguard    = { workspace = true, features = ["use_std"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
libc              = { workspace = true }
tokio             = { workspace = true, features = ["rt-multi-thread"] }

#
# FEATURES
#
[features]
default = []
_probe  = []

#
# FEATURE COMBINATIONS
#
[package.metadata.cargo-feature-combinations]
exclude_features = ["default", "_probe"]
