[package]
name           = "strut-deserialize"
version        = "0.0.2"
edition        = "2024"
rust-version   = "1.85.0"
authors        = ["Erik Sargazakov <erik@serpnet.org>"]
license        = "MIT"
documentation  = "https://docs.rs/strut-deserialize"
readme         = "README.md"
repository     = "https://github.com/strut-rs/strut"
homepage       = "https://strut-rs.github.io"
description    = "Deserialization utilities. Part of the Strut family."
categories     = ["asynchronous", "config", "rust-patterns", "parsing"]
keywords       = ["internal", "deserialization", "flexible", "human-readable"]
publish        = true

[lib]
name = "strut_deserialize"

#
# DEPENDENCIES
#
[dependencies]
serde       = { workspace = true, features = ["std", "derive"] }
serde-value = { workspace = true, features = [] }

[dev-dependencies]
pretty_assertions = { workspace = true }

#
# FEATURES
#
[features]
default = []
_probe  = []

#
# FEATURE COMBINATIONS
#
[package.metadata.cargo-feature-combinations]
exclude_features = ["default", "_probe"]

#
# RELEASE
#
[package.metadata.release]
release = true
