[package]
name           = "strut-sync"
version        = "0.0.2"
edition        = "2024"
rust-version   = "1.85.0"
authors        = ["Erik Sargazakov <erik@serpnet.org>"]
license        = "MIT"
documentation  = "https://docs.rs/strut-sync"
readme         = "README.md"
repository     = "https://github.com/strut-rs/strut"
homepage       = "https://strut-rs.github.io"
description    = "Synchronization primitives. Part of the Strut family."
categories     = ["asynchronous", "config", "rust-patterns"]
keywords       = ["internal", "synchronization", "utilities"]
publish        = true

[lib]
name = "strut_sync"

#
# DEPENDENCIES
#
[dependencies]
tokio             = { workspace = true, features = ["sync", "macros", "time", "rt"] }
tokio-util        = { workspace = true, features = [] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio             = { workspace = true, features = ["macros", "test-util", "rt-multi-thread"] }
tokio-test        = { workspace = true }
futures           = { workspace = true, features = ["std"] }

#
# FEATURES
#
[features]
default = []
_probe  = []

#
# FEATURE COMBINATIONS
#
[package.metadata.cargo-feature-combinations]
exclude_features = ["default", "_probe"]

#
# RELEASE
#
[package.metadata.release]
release = true
