[package]
name           = "strut-tracing"
version        = "0.0.2"
edition        = "2024"
rust-version   = "1.85.0"
authors        = ["Erik Sargazakov <erik@serpnet.org>"]
license        = "MIT"
documentation  = "https://docs.rs/strut-tracing"
readme         = "README.md"
repository     = "https://github.com/strut-rs/strut"
homepage       = "https://strut.rs"
description    = "A convenience layer around `tracing` crate. Part of the Strut family."
categories     = ["asynchronous", "config", "rust-patterns", "development-tools::debugging"]
keywords       = ["component", "tracing", "logging", "console"]
publish        = true

[lib]
name = "strut_tracing"

#
# DEPENDENCIES
#
[dependencies]
# Internal
strut-factory      = { path = "../strut_factory",     version = "0.0.2" }
strut-deserialize  = { path = "../strut_deserialize", version = "0.0.2" }

# External
tracing-core       = { workspace = true, features = [] }
tracing-subscriber = { workspace = true, features = ["fmt", "ansi"] }
serde              = { workspace = true, features = ["std", "derive"] }

# Optional
log                = { optional = true, workspace = true, features = [] }

[dev-dependencies]
pretty_assertions  = { workspace = true }
serde_yml          = { workspace = true }

#
# FEATURES
#
[features]
json    = ["tracing-subscriber/json"]
log     = ["dep:log"]
default = []
_probe  = ["json", "log"]

#
# FEATURE COMBINATIONS
#
[package.metadata.cargo-feature-combinations]
exclude_features = ["default", "_probe"]
isolated_feature_sets = [
    ["json"],
    ["log"],
]

#
# RELEASE
#
[package.metadata.release]
release = true
