[package]
name           = "strut-util"
version        = "0.0.1"
edition        = "2024"
rust-version   = "1.85.0"
authors        = ["Erik Sargazakov <erik@serpnet.org>"]
license        = "MIT"
readme         = "README.md"
repository     = "https://github.com/strut-rs/strut"
homepage       = "https://strut-rs.github.io"
description    = "In-house utilities. Part of the Strut family."
categories     = ["asynchronous", "config", "rust-patterns"]
keywords       = ["internal", "utilities"]
publish        = true

[lib]
name = "strut_util"

#
# DEPENDENCIES
#
[dependencies]
# Internal
strut-factory     = { optional = true, path = "../strut_factory" }
strut-deserialize = { optional = true, path = "../strut_deserialize" }

# External
serde             = { optional = true, workspace = true, features = ["std", "derive"] }
parking_lot       = { optional = true, workspace = true, features = [] }
backoff           = { optional = true, workspace = true, features = [] }
tokio             = { optional = true, workspace = true, features = [] }

#
# FEATURES
#
[features]
backoff = [
    "dep:strut-factory",
    "dep:strut-deserialize",
    "dep:serde",
    "dep:backoff",
    "dep:parking_lot",
    "dep:tokio",
    "tokio/time",
    "tokio/rt",
]

default = []
_probe  = ["backoff"]

#
# FEATURE COMBINATIONS
#
[package.metadata.cargo-feature-combinations]
exclude_features = ["default", "_probe"]
isolated_feature_sets = [
    ["backoff"],
]
