[package]
name           = "test-strut"
version        = "0.0.1"
edition        = "2024"
rust-version   = "1.85.0"
authors        = ["Erik Sargazakov <erik@serpnet.org>"]
license        = "MIT"
readme         = "README.md"
repository     = "https://github.com/strut-rs/strut"
homepage       = "https://strut.rs"
description    = "System tests for `strut` crate. Part of the Strut family."
categories     = ["asynchronous", "config", "rust-patterns"]
keywords       = ["non-public", "system", "tests"]
publish        = false

[lib]
name = "test_strut"

#
# DEPENDENCIES
#
[dev-dependencies]
# Internal
test-util   = { path = "../test_util" }

# External
assertables = { workspace = true }
regex       = { workspace = true }

#
# FEATURES
#
[features]
default = []
_probe  = []

#
# FEATURE COMBINATIONS
#
[package.metadata.cargo-feature-combinations]
exclude_features = ["default", "_probe"]

#
# RELEASE
#
[package.metadata.release]
release = false
