[package]
name           = "test-util"
version        = "0.0.1"
edition        = "2024"
rust-version   = "1.85.0"
authors        = ["Erik Sargazakov <erik@serpnet.org>"]
license        = "MIT"
readme         = "README.md"
repository     = "https://github.com/strut-rs/strut"
homepage       = "https://strut.rs"
description    = "Test-related utilities. Part of the Strut family."
categories     = ["asynchronous", "config", "rust-patterns"]
keywords       = ["non-public", "system", "tests", "utilities"]
publish        = false

[lib]
name = "test_util"

#
# DEPENDENCIES
#
[dependencies]
pretty_assertions = { workspace = true }

#
# FEATURES
#
[features]
default = []
_probe  = []

#
# FEATURE COMBINATIONS
#
[package.metadata.cargo-feature-combinations]
exclude_features = ["default", "_probe"]

#
# RELEASE
#
[package.metadata.release]
release = false
