[package]
name = "heartbeat-demo"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies.strut]
path = "../../../../../strut"
features = [
]

[dependencies.tokio]
version = "*"

[dependencies.serde]
version = "*"

[dependencies.tracing]
version = "*"

[workspace]
# empty array to confirm that this crate is not part of a workspace
